Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.877 devel

**    Add --vpi flag, and fix VPI linkage, bug969. [Arthur Kahlich]

****  Add VerilatedScopeNameMap for introspection, bug966. [Todd Strader]

****  Fix very long module names, bug937. [Todd Strader]

****  Fix internal error on dotted refs into generates, bug958. [Jie Xu]

****  Fix structure parameter constant propagation, bug968. [Todd Strader]

****  Fix enum constant propagation, bug970. [Todd Strader]

****  Fix mis-optimizing public DPI functions, bug963. [Wei Song]


* Verilator 3.876 2015-08-12

***   Add tracing_on, etc to vlt files, bug932. [Frederic Requin]

****  Support extraction of enum bits, bug951. [Jonathon Donaldson]

****  Fix MinGW compiler error, bug927, bug929. [Hans Tichelaar]

****  Fix .c files to be treated as .cpp, bug930. [Jonathon Donaldson]

****  Fix string-to-int space conversion, bug931. [Fabrizio Ferrandi]

****  Fix dpi imports inside generates. [Michael Tresidder]

****  Fix rounding in trace $timescale, bug946. [Frederic Requin]

****  Fix $fopen with SV string, bug947. [Sven Stucki]

****  Fix hashed error with typedef inside block, bug948. [Sven Stucki]

****  Fix makefile with --coverage, bug953. [Eivind Liland]

****  Fix coverage documentation, bug954. [Thomas J Whatson]

****  Fix parameters with function parameter arguments, bug952. [Jie Xu]

****  Fix size casts as second argument of cast item, bug950. [Jonathon Donaldson]


* Verilator 3.874 2015-06-06

***   Add pkg-config .pc file, bug919. [Stefan Wallentowitz]

****  Fix installing missing manpages, bug908. [Ahmed El-Mahmoudy]

****  Fix sign extension in large localparams, bug910. [Mike Thyer]

****  Fix core dump in sync-async warnings, bug911. [Sebastian Dressler]

****  Fix truncation warning with -pins-bv, bug912. [Alfonso Martinez]
